force-app/main/default/objects/FW_TriggerHandlerSettings__c/FW_TriggerHandlerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Determines if trigger handlers should be enabled or disabled (unchecked = enabled)</description>
    <label>Trigger Handler Settings</label>
</CustomObject>