force-app/main/default/objects/FW_TriggerHandlerSettings__c/fields/All__c.field-meta.xml
<CustomField>
    <fullName>All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for all trigger, if true all triggers will be skipped</description>
    <label>Skip All</label>
    <type>Checkbox</type>
</CustomField>