force-app/main/default/objects/FW_TriggerHandlerSettings__c/fields/EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Message</label>
    <type>Checkbox</type>
</CustomField>