force-app/main/default/objects/FW_TriggerHandlerSettings__c/fields/ProductDiscountCriteria__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscountCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Discount Criteria</label>
    <type>Checkbox</type>
</CustomField>