force-app/main/default/objects/FW_TriggerHandlerSettings__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote</label>
    <type>Checkbox</type>
</CustomField>