force-app/main/default/objects/FW_TriggerHandlerSettings__c/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Line Item</label>
    <type>Checkbox</type>
</CustomField>