force-app/main/default/objects/FW_TriggerHandlerSettings__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User</label>
    <type>Checkbox</type>
</CustomField>